--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,13 +4,16 @@ html{
   height: auto;
 }
 body{
-  width: 98%;
+  width: 100%;
   margin: auto;
   background-color: rgb(24, 175, 24);
 }
 
+main{
+  display: flex;
+  width: 98%;
+}
 header{
-
   width: 100%;
   height: 80px;
   background-color: white;
