--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,16 +149,7 @@ height:80% ;
 display: block;
 }
 
-.innerContainer{
 
-  box-shadow: -2px -2px 1px ;
-
-  display: block;
-  padding:50px 0px 0px 50px ;
-  width: 90%;
-  height: 80%;
-  line-height: 1.5;
-}
 .hambarger{
   display: flex;
   justify-content: flex-end;
@@ -203,3 +194,6 @@ display: block;
   margin: 10px 10px 10px 0;
 }
 
+.edit{
+width: 12px;
+}
